# NOVA

./: .gitignore  README.md  contribute.md  docker-compose.dev.yml  docker-compose.yml  docker-up-dev.sh  docker-up.sh
NOVA_BACKEND/: Dockerfile  Dockerfile.dev  README.md  config.py  main.py  pyproject.toml
NOVA_BACKEND/.codex/: README.md  agent.md
NOVA_BACKEND/.codex/domains/: architecture.md  auth.md  infrastructure.md  receipt.md  recipe.md
NOVA_BACKEND/backend/: db_connector.py  logging_utils.py  storage_connector.py
NOVA_BACKEND/backend/auth/: auth.py  dependencies.py  logic.py  models.py
NOVA_BACKEND/backend/bowel/: __init__.py  bowel.py  logic.py  model.py
NOVA_BACKEND/backend/db_management/: internal.py  setup.py
NOVA_BACKEND/backend/movie/: logic.py  model.py  movie.py  tmdb.py
NOVA_BACKEND/backend/nova/: gpt.py
NOVA_BACKEND/backend/receipt/: logic.py  model.py  receipt.py
NOVA_BACKEND/backend/recipe/: logic.py  model.py  recipe.py
NOVA_BACKEND/tests/: test_auth_models.py  test_movie_model.py  test_receipt_logic.py  test_receipt_model.py  test_tmdb_client.py
NOVA_UI/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  nginx.conf  package-lock.json  package.json  proxy.ts
NOVA_UI/.codex/: README.md  agent.md  api_guidelines.md  feature_notes.md  repo_shape.md  ui_guidelines.md
NOVA_UI/app/: globals.css  layout.tsx  page.tsx
NOVA_UI/components/: app-card.tsx  empty-state.tsx  error-state.tsx  page-intro.tsx  screen-skeleton.tsx
NOVA_UI/lib/: api.ts  apps.ts  auth-shared.ts  auth.ts  movie-routes.ts  receipt-routes.ts  utils.ts  (+2 more)
(+43 files in other folders)
